# QT_EX

./: README.md
Flux_Example/: CMakeLists.txt
Flux_Example/flux/: actioncreator.h  actions.h  color_actions.h  color_store.cpp  color_store.h  dispatcher.h  logger_middleware.h  taskstore.cpp  taskstore.h
Flux_Example/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
TCP-IP_ File_Transfer/TCPServer_Application/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
TCP-IP_ File_Transfer/TCPSocket_Application/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
TCP-IP_ File_Transfer/build-TCPServer_Application-Desktop_Qt_5_14_2_GCC_64bit-Debug/: CMakeCache.txt  Makefile  TCPServer_Application  TCPServer_Application.cbp  cmake_install.cmake
TCP-IP_ File_Transfer/build-TCPServer_Application-Desktop_Qt_5_14_2_GCC_64bit-Debug/TCPServer_Application_autogen/EWIEGA46WW/: moc_mainwindow.cpp
TCP-IP_ File_Transfer/build-TCPServer_Application-Desktop_Qt_5_14_2_GCC_64bit-Debug/TCPServer_Application_autogen/include/: ui_mainwindow.h
TCP-IP_Communication/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
thread_concurrent/: CMakeLists.txt  main.cpp
thread_intro/: CMakeLists.txt  main.cpp  thietbi.cpp  thietbi.h
thread_pools/: CMakeLists.txt  album.cpp  album.h  main.cpp  song.cpp  song.h
